# ReframeWeb

./: .gitattributes  .gitignore  AGENTS.md  README.md  benchmark-results-minimax-smoke.json  benchmark-results-retry.json  benchmark-results.json
agent-host/: baml.toml  pyproject.toml  reframe-agent-host.cmd  uv.toml
agent-host/.debug-audio/: 20260630-205350-431632-keyphrase-jarvis.json  20260630-205350-442644-utterance.json  20260630-205407-810456-keyphrase-conversation-on.json  20260630-205407-920512-utterance.json
agent-host/.debug-voice-turn/: 20260706-040623-670433-keyphrase-jarvis.json  20260706-040624-435269-utterance.json
agent-host/baml_src/: README.md  action_history_flow.baml  agent_flow.baml  agent_flow_types.baml  clients.baml  generators.baml  memory_relevance_flow.baml  memory_search_flow.baml  opencode_go_clients.baml  opencode_go_reasoning_clients.baml  retrieved_memory_graph.baml  retrieved_memory_graph_tests.baml  search_depth_flow.baml  task_choice_flow.baml  task_execution_flow.baml  task_execution_tests.baml  task_flow_helpers.baml  task_prompt_flow.baml  voice_turn_flow.baml
agent-host/baml_src/ns_action_history/: flow.baml
agent-host/baml_src/ns_benchmarks/: builders.baml  contexts.baml  control_flow_cases.baml  evaluation.baml  memory_search_cases.baml  task_prompt_cases.baml  task_routing_cases.baml  tasks.baml  tests.baml  types.baml
agent-host/baml_src/ns_context/: machine_state.baml
agent-host/baml_src/ns_memory/: candidate_groups.baml  candidate_review_client.baml  candidate_review_prompt.baml  candidate_review_types.baml  retry_policy.baml
agent-host/baml_src/ns_memory/graph/: types.baml
agent-host/baml_src/ns_memory/ns_internal/: candidate_groups.baml  candidate_review_flow.baml  candidate_review_tests.baml  candidate_review_types.baml  candidates.baml  selection.baml
agent-host/baml_src/ns_memory_search/: depth.baml  domains.baml  domains_tests.baml  terms.baml  types.baml
agent-host/baml_src/ns_memory_selection/: candidate_catalog.baml  candidate_tests.baml  client.baml  conversation_candidates.baml  flow.baml  selection.baml  selection_tests.baml  types.baml
agent-host/baml_src/ns_opencode_go/: direct_clients.baml  model_catalog.baml  task_execution_tests.baml
agent-host/baml_src/ns_task_catalog/: core_tasks.baml  selected_task.baml  task_context.baml  types.baml
agent-host/baml_src/ns_task_completion/: flow.baml
agent-host/baml_src/ns_task_prompt/: assembly.baml  assembly_tests.baml  flow.baml  memory_context.baml  memory_context_tests.baml  types.baml
agent-host/baml_src/ns_task_routing/: flow.baml  selected_task.baml  types.baml
agent-host/baml_src/ns_turn_context/: conversation.baml
agent-host/baml_src/ns_voice_turn/: candidate_review_context.baml  flow.baml  memory_review_flow.baml  request_completion.baml  request_completion_client.baml  request_state.baml  request_state_tests.baml  retry_policy.baml  task_conversation_tests.baml  task_flow.baml  task_flow_types.baml  types.baml
agent-host/baml_src/ns_workspace/: manual_policy.baml  types.baml
agent-host/benchmark-results/: control-flow-20260703-155152.json  control-flow-20260703-162827.json  control-flow-20260703-170423.json  conversation-evaluation-20260703-172240.json  conversation-evaluation-local.json  conversation-evaluation-smoke.json  task-choice-20260703-174606.json
agent-host/src/baml_sdk/: __init__.py  __init__.pyi  _inlinedbaml.py  _typemap.py
agent-host/src/reframe_agent_host/: __main__.py  baml_artifacts.py  baml_generation.py  cli.py  magic_providers.py  memory_readiness.py
agent-host/src/reframe_memory/: __init__.py  config.py  context_memories.py  conversation_evaluation_memories.py  conversations.py  database.py  filesystem_memories.py  filesystem_publication.py  graph_retrieval.py  ids.py  models.py  providers.py  query_results.py  records.py  relevance_memories.py  retrieval_terms.py  retrieved_context.py  schema.py  search.py  search_depth_memories.py  session_memories.py  sessions.py  task_choice_memories.py  task_history.py  task_prompt_memories.py  tasks.py  user_preferences.py
agent-host/tests/: benchmark_fixtures.py  benchmark_workspace_mounted_io.py  completion_equation_case_types.py  completion_equation_cases.py  completion_equation_cases_five.py  completion_equation_cases_mixed.py  completion_normal_cases.py  installed_wheel_smoke.py  live_candidate_memory_regression.py  live_completion_delivery_wrapper_regression.py  live_completion_equation_regression.py  live_completion_generic_regression.py  live_completion_normal_regression.py  mounted_io_workloads.py  test_action_history_summary.py  test_audio_devices.py  test_audio_quality.py  test_baml_clients.py  test_baml_generation.py  test_barge_in.py  test_candidate_memory_prompt_scope.py  test_candidate_memory_writeback.py  test_cli_interrupt.py  test_completion_equation_corpus.py  test_continuous_noise_gate.py  test_control_flow_benchmark.py  test_conversation_evaluation_benchmark.py  test_conversation_mode.py  test_core_task_definitions.py  test_cross_platform_voice.py  test_filesystem_memories.py  test_filesystem_publication.py  test_graph_memory_retrieval.py  test_keyphrase_spotter.py  test_kokoro_onnx.py  test_machine_state.py  test_memory_browser_relations.py  test_memory_database_concurrency.py  test_memory_output.py  test_memory_relevance.py  (+32 more)
semantic-store/: Cargo.toml  README.md
semantic-store/crates/store-catalog/: Cargo.toml
semantic-store/crates/store-host/: Cargo.toml
semantic-store/crates/store-package/: Cargo.toml
semantic-store/crates/store-protocol/: Cargo.toml  build.rs
semantic-store/crates/store-runtime/: Cargo.toml  build.rs
semantic-store/crates/store-sdk/: Cargo.toml  README.md
semantic-store/crates/store-transport/: Cargo.toml
semantic-store/examples/reference-store/: Cargo.toml  README.md  build.rs
semantic-store/proto/: package.proto  types.proto  wire.proto
workspace-fs/: Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
workspace-fs/crates/workspace-daemon/: Cargo.toml  build.rs
(+757 files in other folders)
