[project]
name = "reframe-agent-host"
version = "0.1.0"
description = "Python Agent Host for ReframeWeb"
authors = [
    { name = "jubjub727", email = "matthewbrockgosnell@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "kokoro>=0.9.4",
    "nvidia-cublas-cu12>=12.0.0; platform_system == 'Windows' and platform_machine == 'AMD64'",
    "nvidia-cuda-runtime-cu12>=12.0.0; platform_system == 'Windows' and platform_machine == 'AMD64'",
    "numpy>=2.0.0",
    "pocketsphinx>=5.0.0",
    "silero-vad>=6.2.1",
    "sounddevice>=0.5.5",
    "surrealdb>=2.0.0",
    "baml-core==0.13.0",
    "kokoro-onnx>=0.5.0",
]

[project.scripts]
reframe-agent-host = "reframe_agent_host.cli:main"

[tool.uv.sources]
baml-core = { path = "../../baml-jubjub/baml/baml_language/sdks/python", editable = true }

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"
