[project]
name = "reframe-agent-host"
version = "0.1.0"
description = "Python Agent Host for ReframeWeb"
authors = [
    { name = "jubjub727", email = "matthewbrockgosnell@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "nvidia-cublas-cu12>=12.0.0; platform_system == 'Windows' and platform_machine == 'AMD64'",
    "nvidia-cuda-runtime-cu12>=12.0.0; platform_system == 'Windows' and platform_machine == 'AMD64'",
    "numpy>=2.0.0",
    "pocketsphinx>=5.0.0",
    "pydantic>=2",
    "silero-vad>=6.2.1",
    "sounddevice>=0.5.5",
    "surrealdb>=2.0.0",
    "baml-bridge @ git+https://github.com/jubjub727/baml.git@72d8bdf340913413192d4ce1cc3095e25a18436e#subdirectory=baml_language/sdks/python",
    "kokoro-onnx>=0.5.0",
    "reframe-workspace-daemon==0.1.0",
]

[project.scripts]
reframe-agent-host = "reframe_agent_host.cli:main"
reframe-generate-baml = "reframe_agent_host.baml_generation:generate"
reframe-check-baml = "reframe_agent_host.baml_generation:check"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# These are sibling runtime imports. Without the explicit list, uv_build only
# includes reframe_agent_host and silently omits the memory layer and BAML SDK.
module-name = ["reframe_agent_host", "reframe_memory", "baml_sdk"]

[tool.uv.sources]
reframe-workspace-daemon = { path = "../workspace-fs" }
