[workspace]
members = ["crates/workspace-daemon"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.8"
globset = "0.4"
libc = "0.2"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17", features = ["v4"] }
walkdir = "2.5"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Storage_ProjectedFileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }
fuser = { version = "0.17", default-features = false }
