[package]
name = "reframe-store-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
async-trait.workspace = true
dashmap.workspace = true
prost.workspace = true
prost-types.workspace = true
reframe-store-catalog = { path = "../store-catalog" }
reframe-store-package = { path = "../store-package" }
reframe-store-protocol = { path = "../store-protocol" }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmtime-wasi-http.workspace = true

[lints]
workspace = true

[build-dependencies]
reframe-store-sdk = { path = "../store-sdk" }

[dev-dependencies]
prost-reflect.workspace = true
