[package]
name = "reframe-store-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
prost.workspace = true
reframe-store-protocol = { path = "../store-protocol" }
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1", features = ["process"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile.workspace = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
