[package]
name = "reframe-workspace-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
# GitHub's macOS runners do not provide macFUSE. This keeps production builds
# linked to macFUSE while allowing the full callback surface to compile in CI.
ci-macos-no-mount = ["fuser/macos-no-mount"]

[dependencies]
anyhow.workspace = true
blake3.workspace = true
globset.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
walkdir.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true
winfsp_wrs_sys = "=0.4.1"

[target.'cfg(windows)'.build-dependencies]
winfsp_build = "=0.1.1"

[target.'cfg(target_os = "linux")'.dependencies]
fuser.workspace = true
libc.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
fuser = { workspace = true, features = ["libfuse", "macfuse-4-compat"] }
libc.workspace = true
